--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,18 @@
 buildscript {
-    repositories { mavenCentral() }
+    ext {
+        springBootVersion = '2.1.0.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 
-plugins { id "io.spring.dependency-management" }
-
-ext { springBootVersion = '2.0.5.RELEASE' }
-
 apply plugin: 'groovy'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 jar {
     baseName = 'ndtrc_model'
@@ -14,27 +20,25 @@ jar {
 }
 sourceCompatibility = 1.8
 
-repositories { mavenCentral() }
-
-dependencies {
-    compile('org.springframework.boot:spring-boot-starter') {
-        exclude module: "logback-classic"
-    }
-    compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.9'
-
-    compile group: 'joda-time', name: 'joda-time', version: '2.9.9'
-    compile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.4.2'
-    compile group: 'dom4j', name: 'dom4j', version: '1.6.1'
-    compile group: 'jaxen', name: 'jaxen', version: '1.1.6'
-
-    compile group: 'commons-io', name: 'commons-io', version: '2.5'
-    compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
-
-    compile group: 'junit', name: 'junit', version: '4.12'
-
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+repositories {
+    mavenCentral()
 }
 
-dependencyManagement {
-    imports { mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") }
+dependencies {
+    implementation('org.springframework.boot:spring-boot-starter') {
+        exclude module: "logback-classic"
+    }
+    implementation('org.codehaus.groovy:groovy-all')
+
+    implementation group: 'joda-time', name: 'joda-time', version: '2.9.9'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.4.2'
+    implementation group: 'dom4j', name: 'dom4j', version: '1.6.1'
+    implementation group: 'jaxen', name: 'jaxen', version: '1.1.6'
+
+    implementation group: 'commons-io', name: 'commons-io', version: '2.5'
+    implementation group: 'commons-codec', name: 'commons-codec', version: '1.10'
+
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
