--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter') {
         exclude module: "logback-classic"
     }
-    implementation('org.codehaus.groovy:groovy-all')
+    implementation('org.codehaus.groovy:groovy')
 
     implementation group: 'joda-time', name: 'joda-time', version: '2.9.9'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.4.2'
