--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ jar {
     baseName = 'ndtrc_model'
     version = '1.0.0'
 }
+bootJar {
+    enabled = false
+}
 sourceCompatibility = 1.8
 
 repositories {
@@ -32,7 +35,7 @@ dependencies {
 
     implementation group: 'joda-time', name: 'joda-time', version: '2.9.9'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.4.2'
-    implementation group: 'dom4j', name: 'dom4j', version: '1.6.1'
+    implementation 'dom4j:dom4j:1.6.1'
     implementation group: 'jaxen', name: 'jaxen', version: '1.1.6'
 
     implementation group: 'commons-io', name: 'commons-io', version: '2.5'
