--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 jar {
+    enabled = true
     baseName = 'ndtrc_model'
     version = '1.0.0'
 }
