--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,10 @@
-buildscript {
-    ext {
-        springBootVersion = '2.1.0.RELEASE'
-    }
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
-}
-
 apply plugin: 'groovy'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
 
 jar {
     enabled = true
-//    baseName = 'ndtrc_model'
     version = '1.0.0'
 }
-bootJar {
-    enabled = false
-}
+
 sourceCompatibility = 1.8
 
 repositories {
@@ -29,11 +12,8 @@ repositories {
 }
 
 dependencies {
-    implementation('org.springframework.boot:spring-boot-starter') {
-        exclude module: "logback-classic"
-    }
-    implementation('org.codehaus.groovy:groovy')
-
+    implementation('org.apache.groovy:groovy:4.0.26')
+    implementation("org.slf4j:slf4j-api:2.0.17")
     implementation group: 'joda-time', name: 'joda-time', version: '2.9.9'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.4.2'
     implementation 'dom4j:dom4j:1.6.1'
@@ -42,7 +22,5 @@ dependencies {
     implementation group: 'commons-io', name: 'commons-io', version: '2.5'
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.10'
 
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
-
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.12.2")
 }
