--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,16 @@
 apply plugin: 'groovy'
+apply plugin: 'java'
 
 jar {
     enabled = true
     version = '1.0.0'
 }
 
-sourceCompatibility = 1.8
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 
 repositories {
     mavenCentral()
@@ -14,13 +19,8 @@ repositories {
 dependencies {
     implementation('org.apache.groovy:groovy:4.0.26')
     implementation("org.slf4j:slf4j-api:2.0.17")
-    implementation group: 'joda-time', name: 'joda-time', version: '2.9.9'
+    implementation group: 'joda-time', name: 'joda-time', version: '2.14.0'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.4.2'
-    implementation 'dom4j:dom4j:1.6.1'
-    implementation group: 'jaxen', name: 'jaxen', version: '1.1.6'
-
-    implementation group: 'commons-io', name: 'commons-io', version: '2.5'
-    implementation group: 'commons-codec', name: 'commons-codec', version: '1.10'
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.12.2")
 }
