--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ jar {
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
+        languageVersion = JavaLanguageVersion.of(8)
     }
 }
 
@@ -17,11 +17,11 @@ repositories {
 }
 
 dependencies {
-    implementation('org.apache.groovy:groovy:4.0.26')
-    implementation("org.slf4j:slf4j-api:2.0.17")
-    implementation group: 'joda-time', name: 'joda-time', version: '2.14.0'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.18.3'
+    implementation('org.apache.groovy:groovy:4+')
+    implementation("org.slf4j:slf4j-api:2.+")
+    implementation group: 'joda-time', name: 'joda-time', version: '2.+'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.+'
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.12.2")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.+")
 }
 
