--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ repositories {
 }
 
 dependencies {
-    implementation('org.codehaus.groovy:groovy:3+')
+    implementation('org.codehaus.groovy:groovy:2.5.+')
     implementation("org.slf4j:slf4j-api:2.+")
     implementation group: 'joda-time', name: 'joda-time', version: '2.+'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.+'
