--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,13 @@
                 <version>3.11.2</version>
                 <executions>
                     <execution>
+                        <id>generate-javadoc</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>javadoc</goal>
+                        </goals>
+                    </execution>
+                    <execution>
                         <id>attach-javadocs</id>
                         <goals>
                             <goal>jar</goal>
