--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>nl.eventconnectors.ff</groupId>
     <artifactId>ff-model</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <name>Feed Factory Model</name>
     <description>A model library for the Feed Factory project</description>
     <url>https://eventconnectors.nl</url>
@@ -57,29 +57,29 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.groovy</groupId>
+            <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
-            <version>${groovy.version}</version>
+            <version>2.5.+</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.17</version>
+            <version>2.+</version>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
-            <version>2.14.0</version>
+            <version>2.+</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-joda</artifactId>
-            <version>2.18.3</version>
+            <version>2.+</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.12.2</version>
+            <version>5.+</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
